res/examples/valid/if_else_expression_assign.eg
let a: number = 123;
let b: number = 456;
let c: number = 789;

a = if (1 < 2) { b } else { c };