res/examples/invalid/if_else_expression_with_invalid_and_infix_as_condition.eg
if (true and 1) { (); } else { (); };

// out: TypeError: mismatched types: expected type `bool` but received `number`